# blackjack

./: #bj4.kv#  #bj5.kv#  #bj_kv_2.py#  .gitignore  LICENCE  android.txt  bj.kv  bj2.kv  bj3.kv  bj5.kv  bj6.kv  bj7.kv  bj_1.kv  bj_kv_1.py  bj_kv_2.py  bj_kv_3.py  bj_kv_4.py  bj_kv_5.py  bj_kv_6.py  bj_kv_7.py  bj_kv_test.py  bj_object_10.py  blackjack.kv  blackjack.py  blackjack_1.py  buildozer.spec  pyproject.toml  rename_files.py  temp
archive/: bj2.kv  bj3.kv  bj4.kv  bj5.kv  bj6.kv  bj_kv_1.py  bj_kv_3.py  bj_kv_4.py  bj_kv_6.py  bj_kv_test.py  blackjack.py  rename_files_1.py  test.py
blackjack/: _version.py  engine.py  helpers.py  main.py  strategies.py
blackjack/interfaces/: text_game.py
blackjack/interfaces/kivy/: blackjack.ini  blackjack.kv  main.py  settings.json  settings_players.json  settings_rules.json
blackjack/interfaces/text/: text_game.py
buildozer/: buildozer.spec  main.py
buildozer/.buildozer/: state.db
buildozer/.buildozer/android/app/: bj.kv  blackjack.pyo  main.py  main.pyo  sitecustomize.pyo
python2/: bj.kv  blackjack.py  buildozer.spec  main.py
python2/.buildozer/: state.db
python3/: blackjack_1.py
tests/: test_engine.py
